--- a/libft/Makefile
+++ b/libft/Makefile
@@ -50,10 +50,10 @@ $(NAME) : $(OBJ)
 	@ar -r $(NAME) $?
 
 bonus : $(OBJB)
-	@ar -r $(NAME) $?
+	ar -r $(NAME) $?
 
 %.o:%.c
-	@$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean :
 	@rm -rf *.o
