--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,7 +1,7 @@
 CC = CC
 NAME = libftprintf.a
 CFLAGS = -Wall -Wextra -Werror
-SRC = ft_printf.c ft_hexa_x.c ft_hexa_xx.c ft_putnbr_fd_u.c ft_putchar_fd.c ft_putnbr_fd.c ft_putstr_fd.c
+SRC = ft_putnbr_fd_u.c ft_printf.c ft_hexa_x.c ft_hexa_xx.c ft_putchar_fd.c ft_putnbr_fd.c ft_putstr_fd.c
 OBJ = $(SRC:.c=.o)
 
 all : $(NAME)
